--- a/webServer.env
+++ b/webServer.env
@@ -1,28 +1,20 @@
-# Rutas base
-WEB_SERVER_DIR="C:/webServer"
-DOWNLOADS_DIR="C:/webServer/downloads"
-BIN_DIR="C:/webServer/bin"
-CONFIG_DIR="C:/webServer/config"
-TEMP_DIR="C:/webServer/tmp"
-ETC_DIR="C:/webServer/etc"
-SSL_DIR="C:/webServer/etc/ssl"
-APPS_DIR="C:/webServer/etc/apps"
-LOGS_DIR="C:/webServer/logs"
+# DB Engine
+INSTALLED_DB_ENGINE=MariaDB
+INSTALLED_DB_ENGINE_VERSION=11.4.5
+INSTALLED_DB_ENGINE_DIR=""
 
-# Variables de versión por defecto
-DEFAULT_PHP_VERSION="8.3.20"
-DEFAULT_PYTHON_VERSION="3.13.3"
-DEFAULT_NODE_VERSION="22.14.0"
-# DEFAULT_DB_ENGINE="MySQL"
-# DEFAULT_DB_VERSION="8.0.42"
-DEFAULT_DB_ENGINE="MariaDB"
-DEFAULT_DB_VERSION="11.4.5"
-DEFAULT_PHPMYADMIN_VERSION="5.2.2"
-DEFAULT_APACHE_VERSION="2.4.63"
-DEFAULT_NGINX_VERSION="1.26.3" # 1.27.5
-DEFAULT_COMPOSER_VERSION="2.8.8"
-DEFAULT_GIT_VERSION="2.49.0"
+# PHP
+INSTALLED_PHP_VERSION="8.3.20"
+INSTALLED_PHP_DIR="C:/webServer/bin/php/8.3.20/"
 
-# Variables adicionales
-VIRTUAL_HOST_NAME="webserver.local"
-SSL_ENABLED=true
+# NodeJs
+INSTALLED_NODE_VERSION=22.15.0
+
+# Nginx
+INSTALLED_NGINX_VERSION=1.26.3
+INSTALLED_NGINX_DIR=""
+
+# Server Engine
+INSTALLED_WEB_SERVER_ENGINE="Apache"
+INSTALLED_WEB_SERVER_ENGINE_VERSION="2.4.63"
+INSTALLED_WEB_SERVER_ENGINE_DIR="C:/webServer/bin/apache/2.4.63/"
